@@ -7,6 +7,9 @@
 
   <table class="contentstable" align="center" style="margin-left: 30px"><tr>
     <td width="50%">
+        <p class="biglink"><a class="biglink" href="{{ pathto("whats-new/whats-new-in-2.1") }}">What's New in Bazaar 2.1?</a><br/>
+        <span class="linkdescr">what's new in this release</span>
+      </p>
         <p class="biglink"><a class="biglink" href="{{ pathto("user-guide/index") }}">User Guide</a><br/>
         <span class="linkdescr">how to use Bazaar effectively</span>
       </p>
@@ -18,7 +21,7 @@
       </p>
     </td><td width="50%">
     <p class="biglink"><a class="biglink" href="{{ pathto("release-notes/index") }}">Release Notes</a><br/>
-      <span class="linkdescr">what's new</span>
+      <span class="linkdescr">a detailed log of changes</span>
       </p>
       <p class="biglink"><a class="biglink" href="{{ pathto("upgrade-guide/index") }}">Upgrade Guide</a><br/>
       <span class="linkdescr">moving to Bazaar 2.x</span>
