@@ -10,6 +10,7 @@ Table of Contents
 .. toctree::
    :maxdepth: 1
 
+   whats-new/whats-new-in-2.1
    user-guide/index
    tutorials/index
    quick-reference/index
